delete discussion api
